--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "debug": "^4.3.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "fawn": "^2.1.5",
     "helmet": "^4.2.0",
     "joi": "^17.3.0",
+    "joi-objectid": "^3.0.1",
     "mongoose": "^5.10.15",
     "morgan": "^1.10.0"
   }
